<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="entry"
            type="com.example.journal.core.models.Entry" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.CreateFragment">


            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/label_title"
                android:inputType="textPersonName"
                tools:text="Title" />

            <EditText
                android:id="@+id/txtText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="#eeee"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/label_text"
                android:inputType="textPersonName"
                tools:text="Description" />


        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="bottom|right"
            android:tint="@android:color/black"
            android:src="@drawable/ic_save_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>


</layout>